# nrl-predictor2

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
.claude/: harness.json
agent/: budget.py  graph.py  lambda_handler.py  state.py
agent/nodes/: challenger.py  extended.py  judge.py  primary.py  router.py
agent/tools/: __init__.py  coaching_matchup.py  head_to_head.py  injury_list.py  ladder.py  lessons.py  momentum.py  recent_form.py  spine_synergy.py  team_sheet.py  trap_game.py  venue_profile.py  weather.py  web_search.py
api/: accuracy.py  rate_limit.py  router.py  tournament.py
common/: match_id.py  predictions.py  team_registry.json  teams.py
docs/: harness-onboarding.md  matchid-identity-plan.md  team-identity-plan.md  visualization-plans.md
infra/: app.py  cdk.json  response.json  stack.py
orchestrator/: lambda_handler.py
retrospective/: lambda_handler.py  prompt.py  retrospective.py
scoring/: lambda_handler.py  metrics.py  odds_accuracy.py  scorer.py
scrapers/articles/: body.py  haiku_extractor.py  rss.py
scrapers/nrl/: backfill.py  draw.py  ladder.py  results.py  team_sheet.py
scrapers/odds/: lambda_handler.py  scraper.py
scrapers/shared/: constants.py  http_client.py  models.py  s3_cache.py
scrapers/weather/: venues.py  weather.py
scripts/: daily_update.sh  migrate_identity.py  round_state.py  score_round.py
tests/agent/: test_challenger_node.py  test_data_completeness.py  test_extended_node.py  test_graph_integration.py  test_judge_node.py  test_primary_node.py  test_router_node.py  test_state.py  test_tool_slug_robustness.py  test_write_prediction.py
tests/common/: test_match_id.py  test_predictions.py  test_teams.py
tests/orchestrator/: test_idempotency.py
tests/scoring/: test_scorer.py
tests/scrapers/: test_ladder_parse.py  (+1 more)
tools/: dashboard.py  inspector.py  local_invoke.py  verify_prompt_cache.py
(+1 files in other folders)
