[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nrl-predictor2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "boto3>=1.34",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "tavily-python>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "moto[dynamodb,s3,secretsmanager]>=5.0",
    "aws-cdk-lib>=2.140",
    "constructs>=10.3",
    "ruff>=0.15",
]
viz = [
    # Plan B dashboard (tools/dashboard.py). Not needed for the agent or tests.
    "streamlit>=1.40",
    "pandas>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scrapers*", "agent*", "scoring*", "api*", "orchestrator*", "retrospective*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
# cdk.out is a CDK build artifact, not source.
extend-exclude = ["infra/cdk.out"]
